--- a/iaz/templates/Theme/General/Template/Menu/contacts.html.twig
+++ b/iaz/templates/Theme/General/Template/Menu/contacts.html.twig
@@ -1,4 +1,4 @@
-<span style="float: right; margin-top: -18px; display: inline-block; background: #fff; padding: 20px 20px; border-left: 1px solid #ddd; border-right: 1px solid #ddd;">
+<span style="float: right; margin-top: -18px; display: inline-block; padding: 10px 20px; border-left: 1px solid #ddd; border-right: 1px solid #ddd;">
 	<a href="" data-placement="bottom"  title="Echangeons par téléphone" style="padding: 3px 7px; border: 1px solid #f8f8f8; border-radius: 5px;"><span class="fa fa-phone-square"></span></a> 
 	<a href="" title="Echangeons par live tchat" data-placement="bottom"  style="padding: 3px 7px; border: 1px solid #f8f8f8; border-radius: 5px;"><span class="fa fa-comments"></span></a> 
 	
@@ -7,8 +7,7 @@
 		  <span class="fa fa-ellipsis-h"></span>
 		</a>
 		<ul class="dropdown-menu dropdown-menu-left rounded shadow menu-animate slideIn" aria-labelledby="navbarDropdown" style="margin-left: -200px; margin-top: 0px; width: 250px;">
-			<li><a class="dropdown-item has-icon"href="#!"><span class="theme-icon-holder mr-2"><i class="fa fa-map-signs fa-fw"></i></span> Vide</a></li>
-			<li><a class="dropdown-item has-icon"href="#!"><span class="theme-icon-holder mr-2"><i class="fa fa-map-signs fa-fw"></i></span> Vide</a></li>
+			<li><a class="dropdown-item has-icon"href="#!"><span class="theme-icon-holder mr-2"><i class="fa fa-map-signs fa-fw"></i></span> Formulaire de contact</a></li>
 		</ul>
 	</span>
 </span>
