--- a/iaz/templates/Theme/General/Template/Menu/menubare.html.twig
+++ b/iaz/templates/Theme/General/Template/Menu/menubare.html.twig
@@ -286,7 +286,7 @@
                     <li>
                         <a href="#">Aide</a>
                     </li>
-                    <li class="apply_now"><a href="">Apply Now</a></li>
+                    <!-- li class="apply_now"><a href="">Apply Now</a></li -->
                   </ul>
                 </div><!-- navbar-collapse -->
 
