--- a/iaz/templates/Theme/Users/Adminuser/Accueil/accueiladmin.html.twig
+++ b/iaz/templates/Theme/Users/Adminuser/Accueil/accueiladmin.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block userblog_menuleft %}
-	{{ render(controller("App\\Controller\\Users\\Adminuse\\AccueilController:menuadmin")) }}
+	{{ render(controller("App\\Controller\\Users\\Adminuser\\AccueilController:menuadmin")) }}
 {% endblock %}
 
 {% block userblog_body %}
