--- a/iaz/templates/Theme/Produit/Produit/Produit/produitformation.html.twig
+++ b/iaz/templates/Theme/Produit/Produit/Produit/produitformation.html.twig
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="{{ asset('template/js/jquery.expandable.js') }}"></script>
 
 
-<div style="background: #f5f5f5;">
+<div style="background: #f0f0f2;">
 <div class="container">
 <div class="row">
 {% if is_mobile() %}
@@ -81,25 +81,27 @@
 <div style="background: #f0f0f2; padding-top: 20px;">
 <div class="container">
 <div class="row">
-	{% include 'Theme/Produit/Service/Apropos/menuleft.html.twig' %}
+	<div class="col-md-3">
+		{% include 'Theme/Produit/Service/Apropos/menuleft.html.twig' %}
+	</div>
 	<div class="col-md-9">
-		<div class="my-div">
-		<section class="testing" style="width: 100%;">
-		   <div class="description2 to-expand">
-			<h2>À propos des {{ categorie.nom }} </h2>
-			<p>
-			{{ categorie.description|raw }}
-			</p>
-		   </div>
-		</section>
+	<div class="my-div">
+	<section class="testing" style="width: 100%;">
+		<div class="description2 to-expand">
+		<h2>À propos des {{ categorie.nom }} </h2>
+		<p>
+		{{ categorie.description|raw }}
+		</p>
 		</div>
+	</section>
+	</div>
+	
+	<div class="my-div">
+	<section class="testing" style="width: 100%;">
+	<div class="description2 to-expand" style="padding-bottom: 50px;">
+	<h2>{% if categorie.typeservice == 'diplomante' %}Nos formations Diplomantes {% else %}Nos formations continues{% endif %}</h2>
 		
-		<div class="my-div">
-		<section class="testing" style="width: 100%;">
-		<div class="description2 to-expand" style="padding-bottom: 50px;">
-		<h2>{% if categorie.typeservice == 'diplomante' %}Nos formations Diplomantes {% else %}Nos formations continues{% endif %}</h2>
-		
-  <div class="cards row text-left">
+    <div class="cards row text-left">
 	{% if categorie.typeservice == 'diplomante' %}
 		{% for diplome in categorie.getScatProduits %}
 		<div class="col-md-6">
