--- a/iaz/templates/Theme/Produit/Service/Apropos/evenement.html.twig
+++ b/iaz/templates/Theme/Produit/Service/Apropos/evenement.html.twig
@@ -1,197 +1,143 @@
 <style>
-	.card_event {
-	  float: left;
-	  width: 100%!important;
-	}
-	.card_event .menu-content {
-	  margin: 0;
-	  padding: 0;
-	  list-style-type: none;
-	}
-	.card_event .menu-content::before, .card_event .menu-content::after {
-	  content: '';
-	  display: table;
-	}
-	.card_event .menu-content::after {
-	  clear: both;
-	}
-	.card_event .menu-content li {
-	  display: inline-block;
-	}
-	.card_event .menu-content a {
-	  color: #fff;
-	}
-	.card_event .menu-content span {
-	  position: absolute;
-	  left: 50%;
-	  top: 0;
-	  font-size: 10px;
-	  font-weight: 700;
-	  font-family: 'Open Sans';
-	  -webkit-transform: translate(-50%, 0);
-			  transform: translate(-50%, 0);
-	}
-	.card_event .wrapper {
-	  background-color: #fff;
-	  min-height: 540px;
-	  position: relative;
-	  overflow: hidden;
-	}
-	.card_event .wrapper:hover .data {
-	  -webkit-transform: translateY(0);
-			  transform: translateY(0);
-	}
-	.card_event .data {
-	  position: absolute;
-	  bottom: 0;
-	  width: 100%;
-	  -webkit-transform: translateY(calc(70px + 1em));
-			  transform: translateY(calc(70px + 1em));
-	  transition: -webkit-transform 0.3s;
-	  transition: transform 0.3s;
-	  transition: transform 0.3s, -webkit-transform 0.3s;
-	}
-	.card_event .data .content {
-	  padding: 1em;
-	  position: relative;
-	  z-index: 1;
-	}
-	.card_event .author {
-	  font-size: 12px;
-	}
-	.card_event .title {
-	  margin-top: 10px;
-	}
-	.card_event .text {
-	  height: 70px;
-	  margin: 0;
-	}
-	.card_event input[type='checkbox'] {
-	  display: none;
-	}
-	.card_event input[type='checkbox']:checked + .menu-content {
-	  -webkit-transform: translateY(-60px);
-			  transform: translateY(-60px);
-	}
+	.event_container {
+  display: flex;
+  height: 230px;
+  background: #FFF;
+  border-radius: 2px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 8px 8px 0 rgba(0, 0, 0, 0.15);
+  margin-bottom: 15px;
+}
+.event_container .event_bg {
+  width: 40%;
+  height: 100%;
+  background: #333;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.event_container .event_info {
+  width: 60%;
+  height: 100%;
+  padding: 10px 20px;
+}
+.event_container .event_info .event_title {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+}
+.event_container .event_info .event_title h4 {
+  font-size: 26px;
+  font-family: "Quicksand", sans-serif;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.event_container .event_info .event_desc {
+  display: flex;
+  width: 100%;
+  height: calc(100% - 100px);
+}
+.event_container .event_info .event_desc p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #565861;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.event_container .event_info .event_footer {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  justify-content: space-between;
+}
+.event_container .event_info .event_footer .event_date p {
+  font-size: 15px;
+  font-weight: 600;
+  color: #333;
+}
+.event_container .event_info .event_footer .event_more {
+  display: flex;
+  width: auto;
+  height: 100%;
+  align-items: center;
+}
+.event_container .event_info .event_footer .event_more a.btn_more {
+  display: flex;
+  width: auto;
+  height: 40px;
+  align-items: center;
+  padding: 0 15px;
+  text-decoration: none;
+  color: #0060b1;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 2px;
+  will-change: background;
+  transition: background 0.3s, color 0.2s ease-in;
+}
+.event_container .event_info .event_footer .event_more a.btn_more i.material-icons {
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0 2px;
+}
+.event_container .event_info .event_footer .event_more a.btn_more:hover {
+  background: #0060b1;
+  color: #FFF;
+}
 
-	.example-1 .wrapper {
-	  
-	}
-	.example-1 .date {
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  background-color: #3565ae;
-	  color: #fff;
-	  padding: 0.8em;
-	  width: 80px;
-	}
-	.example-1 .date span {
-	  display: block;
-	  text-align: center;
-	}
-	.example-1 .date .day {
-	  font-weight: 700;
-	  font-size: 24px;
-	  text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.18);
-	}
-	.example-1 .date .month {
-	  text-transform: uppercase;
-	}
-	.example-1 .date .month,
-	.example-1 .date .year {
-	  font-size: 12px;
-	}
-	.example-1 .content {
-	  background-color: #fff;
-	  box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3);
-	}
-	.example-1 .title a {
-	  color: #38488f;
-	  font-size: 20px;
-	}
-	.example-1 .title a:hover {
-	  text-decoration: underline;
-	}
-
-	.example-1 .menu-button {
-	  position: absolute;
-	  z-index: 999;
-	  top: 16px;
-	  right: 16px;
-	  width: 25px;
-	  text-align: center;
-	  cursor: pointer;
-	}
-	.example-1 .menu-button span {
-	  width: 5px;
-	  height: 5px;
-	  background-color: gray;
-	  color: gray;
-	  position: relative;
-	  display: inline-block;
-	  border-radius: 50%;
-	}
-	.example-1 .menu-button span::after, .example-1 .menu-button span::before {
-	  content: '';
-	  display: block;
-	  width: 5px;
-	  height: 5px;
-	  background-color: currentColor;
-	  position: absolute;
-	  border-radius: 50%;
-	}
-	.example-1 .menu-button span::before {
-	  left: -10px;
-	}
-	.example-1 .menu-button span::after {
-	  right: -10px;
-	}
-	.example-1 .menu-content {
-	  text-align: center;
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  width: 100%;
-	  z-index: -1;
-	  transition: -webkit-transform 0.3s;
-	  transition: transform 0.3s;
-	  transition: transform 0.3s, -webkit-transform 0.3s;
-	  -webkit-transform: translateY(0);
-			  transform: translateY(0);
-	}
-	.example-1 .menu-content li {
-	  width: 33.333333%;
-	  float: left;
-	  background-color: #3565ae;
-	  height: 60px;
-	  position: relative;
-	}
-	.example-1 .menu-content a {
-	  position: absolute;
-	  top: 50%;
-	  left: 50%;
-	  -webkit-transform: translate(-50%, -50%);
-			  transform: translate(-50%, -50%);
-	  font-size: 24px;
-	}
-	.example-1 .menu-content span {
-	  top: -10px;
-	}
-
-	
-	.shadow {
-	  color: white;
-	  text-shadow: 2px 2px 4px #000000;
-	}
+@media screen and (max-width: 575px) {
+  .event_container {
+    width: 100%;
+    height: 480px;
+    background: #FFF;
+    flex-direction: column;
+  }
+  .event_container .event_bg {
+    width: 100%;
+    height: 250px;
+    min-height: 250px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 0;
+  }
+  .event_container .event_info {
+    width: 100%;
+    height: 230px;
+  }
+}
 </style>
 
 <div class="col-md-8" style="padding: 0px;">
 
-<div class="row">
 {% for service in liste_article %}
 
-	<div class="col-md-6">
+  <div class="event_container">
+	<div class="event_bg" style="background-image: url('{% if service.imgservice != null %}{{ asset(service.imgservice.getwebpath) }}{% else %}{{ asset('template/images/present.png') }}{% endif %}')"></div>
+	<div class="event_info">
+	  <div class="event_title">
+		<h4>{{ service.nom }}</h4>
+	  </div>
+	  <div class="event_desc">
+		<p>{{ service.description }}</p>
+	  </div>
+	  <div class="event_footer">
+		<div class="event_date">
+		  <p>{{ service.dateEvent|date('d') }} {{ service.dateEvent|date('M') }}, {{ service.dateEvent|date('Y') }} - {{ service.breve }}</p>
+		</div>
+		<div class="event_more">
+		  <a href="#" class="btn_more">
+			En savoir plus
+		  </a>
+		</div>
+	  </div>
+	</div>
+  </div>
+
+
+	<!-- div class="col-md-6">
 		<a href="{{ path('produit_service_detail_actualite', {'id': service.id}) }}" class="card h-100" data-original-title="" title="" style="min-height: 500px;">
 			<div class="card-body p-5">
 				<div class="text-center">
@@ -201,7 +147,7 @@
 				<p class="card-text">{{ service.description }}</p>
 			</div>
 		</a>
-    </div>
+    </div -->
  
 {% else %}
 <div style="height: 400px; padding-top: 100px; background: #fff; margin-bottom: 15px;">
@@ -211,7 +157,6 @@
 	</div>
 </div>
 {% endfor %}
-</div>
 
 
 <span class="clearfix"></span>
