--- a/iaz/templates/Theme/Users/Adminuser/Categorie/modificationcategorie.html.twig
+++ b/iaz/templates/Theme/Users/Adminuser/Categorie/modificationcategorie.html.twig
@@ -1,6 +1,6 @@
 <div class="row">
 <div class="col-md-8 col-md-offset-2 col-sm-12">
-	{{ form_start(form, {'class': 'row', 'style': 'margin-top: 15px', 'attr': path('users_adminuser_modification_categorie_produit', {'id': cat.id }) }}) }}
+	{{ form_start(form, {'attr': {'class':'row', 'style': 'margin-top: 15px', 'action': path('users_adminuser_modification_categorie_produit', {'id': cat.id }) }}) }}
 	
 		 <div class="input-field col s12">
 			{{ form_widget(form.nom) }}
