--- a/iaz/templates/Theme/layoutbasehome.html.twig
+++ b/iaz/templates/Theme/layoutbasehome.html.twig
@@ -36,7 +36,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+  	<script src="{{ asset('templatecourse/js/jquery-1.11.1.min.js') }}"></script>
 	<link rel="stylesheet" href="{{ asset('template/notify/themes/alertify.core.css') }}"/>
 	<link rel="stylesheet" href="{{ asset('template/notify/themes/alertify.default.css') }}" id="toggleCSS"/>
 	<script src="{{ asset('template/notify/lib/alertify.min.js') }}"></script>
@@ -226,6 +226,195 @@
   }
 }
 
+
+.breadcrumbs {
+  list-style: none;
+  margin: 0px 0px 16px 0px;
+  padding: 0;
+}
+
+.breadcrumbs li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: block;
+  float: left;
+  font-family: Montserrat,sans-serif;
+  text-transform: capitalize;
+  font-weight: 700;
+  letter-spacing: .05em;
+  line-height: 20px;
+  color: hsl(0, 0%, 30%);
+}
+
+.breadcrumbs li a {
+  display: block;
+  padding: 0 40px 0 0px;
+  color: hsl(0, 0%, 30%);
+  text-decoration: none;
+  height: 20px;
+  position: relative;
+  perspective: 700px;
+}
+
+.breadcrumbs li a:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-color: #333;
+  border-style: solid;
+  border-width: 1px 1px 0 0;
+  
+  -webkit-backface-visibility: hidden;
+  outline: 1px solid transparent;
+  
+  position: absolute;
+  right: 20px;
+  -webkit-transition: all .15s ease;
+     -moz-transition: all .15s ease;
+      -ms-transition: all .15s ease;
+          transition: all .15s ease;
+  -webkit-transform: rotateZ(45deg) skew(10deg, 10deg);
+     -moz-transform: rotateZ(45deg) skew(10deg, 10deg);
+      -ms-transform: rotateZ(45deg) skew(10deg, 10deg);
+          transform: rotateZ(45deg) skew(10deg, 10deg);
+}
+
+
+.breadcrumbs li a:hover:after {
+  right: 15px;
+  -webkit-transform: rotateZ(45deg) skew(-10deg, -10deg);
+     -moz-transform: rotateZ(45deg) skew(-10deg, -10deg);
+      -ms-transform: rotateZ(45deg) skew(-10deg, -10deg);
+          transform: rotateZ(45deg) skew(-10deg, -10deg);
+}
+
+.c-navigation-breadcrumbs__directory {
+  display: flex;
+}
+.c-navigation-breadcrumbs__link:link {
+  color: #007c89;
+}
+.c-navigation-breadcrumbs__link:link:hover {
+  background-image: linear-gradient(currentColor, currentColor);
+  background-size: auto 1px;
+  background-repeat: repeat-x;
+  background-position: 0 calc(50% + 1ex);
+}
+@media (max-width: 500px) {
+  .c-navigation-breadcrumbs__item:not(:nth-last-child(2)) {
+    display: none;
+  }
+  .c-navigation-breadcrumbs__link:before {
+    display: inline-block;
+    content: '\200b';
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23007c89' stroke-width='2' stroke-linecap='round' stroke-linejoin='round%5C'%3E%3Cline x1='19' y1='12' x2='5' y2='12'%3E%3C/line%3E%3Cpolyline points='12 19 5 12 12 5'%3E%3C/polyline%3E%3C/svg%3E") center/16px 16px no-repeat;
+    width: 16px;
+  }
+}
+@media (min-width: 501px) {
+  .c-navigation-breadcrumbs__item:nth-last-child(n+2):after {
+    display: inline-block;
+    content: '\200b';
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23767676' stroke-width='2' stroke-linecap='round' stroke-linejoin='round%5C'%3E%3Cpolyline points='9 18 15 12 9 6'%3E%3C/polyline%3E%3C/svg%3E") center/16px 16px no-repeat;
+    width: 16px;
+    margin: 0 8px;
+  }
+  .c-navigation-breadcrumbs__link {
+    display: block;
+    float: left;
+  }
+}
+
+
+.pagination {
+    background: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+	display: block;
+	border-radius: 7px;
+}
+
+.page {
+    display: inline-block;
+    padding: 0px 9px;
+    margin-right: 4px;
+    border-radius: 3px;
+    border: solid 1px #c0c0c0;
+    background: #e9e9e9;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255, .8), 0px 1px 3px rgba(0,0,0, .1);
+    font-size: .875em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #717171;
+    text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+}
+
+.page:hover, .page.gradient:hover {
+    background: #fefefe;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FEFEFE), to(#f0f0f0));
+    background: -moz-linear-gradient(0% 0% 270deg,#FEFEFE, #f0f0f0);
+}
+
+.page.active {
+    border: none;
+    background: #616161;
+    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+    color: #f0f0f0;
+    text-shadow: 0px 0px 3px rgba(0,0,0, .5);
+}
+
+.page.gradient {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f8f8f8), to(#e9e9e9));
+    background: -moz-linear-gradient(0% 0% 270deg,#f8f8f8, #e9e9e9);
+}
+
+.pagination.dark {
+    background: #414449;
+    color: #feffff;
+}
+
+.page.dark {
+    border: solid 1px #32373b;
+    background: #3e4347;
+    box-shadow: inset 0px 1px 1px rgba(255,255,255, .1), 0px 1px 3px rgba(0,0,0, .1);
+    color: #feffff;
+    text-shadow: 0px 1px 0px rgba(0,0,0, .5);
+}
+
+.page.dark:hover, .page.dark.gradient:hover {
+    background: #3d4f5d;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#547085), to(#3d4f5d));
+    background: -moz-linear-gradient(0% 0% 270deg,#547085, #3d4f5d);
+}
+
+.page.dark.active {
+    border: none;
+    background: #2f3237;
+    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .1);
+}
+
+.page.dark.gradient {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#565b5f), to(#3e4347));
+    background: -moz-linear-gradient(0% 0% 270deg,#565b5f, #3e4347);
+}
+
+.my-div {
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 10px;
+	background-color: #fff;
+	border-radius: 1em;
+}
+
+@media (max-width: 700px) {
+	.my-div {
+		width: auto;
+		margin: 0 auto;
+		border-radius: 0;
+		padding: 1em;
+	}
+}
 </style>
 </head> 
 
@@ -254,7 +443,7 @@
   </div>
 
 
-  <script src="{{ asset('templatecourse/js/jquery-1.11.1.min.js') }}"></script>
+
 <script src="{{ asset('templatecourse/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('templatecourse/js/jquery.flexslider.js') }}"></script>
 <script src="{{ asset('templatecourse/js/jquery.themepunch.tools.min.js') }}"></script>
