--- a/iaz/templates/Theme/General/Template/Menu/menubare.html.twig
+++ b/iaz/templates/Theme/General/Template/Menu/menubare.html.twig
@@ -153,10 +153,10 @@
           </li>
         </ul>
         <ul class="topbar-right">
-          <li class="hidden-xs"><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li class="hidden-xs"><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li class="hidden-xs"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li class="hidden-xs"><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+          <li class="hidden-xs"><a href="https://twitter.com/gaielbleriot" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li class="hidden-xs"><a href="https://www.facebook.com/AZcorpAfrica/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li class="hidden-xs"><a href="https://www.instagram.com/azcorp_africa/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li class="hidden-xs"><a href="https://www.youtube.com/channel/UCvlgTzTAw1tABaOXhDM7U8g" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
           <li class="hidden-xs"><a href="#"><i class="fa fa-rss"></i></a></li>
           <li class="top-search list-inline">
             <a href="#"><i class="fa fa-search"></i></a>
