--- a/iaz/templates/Theme/General/Template/Menu/footer.html.twig
+++ b/iaz/templates/Theme/General/Template/Menu/footer.html.twig
@@ -90,12 +90,10 @@
 		<div class="socialArea">
 		  <h5>Find us on:</h5>
 		  <ul class="list-inline ">
-		  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-		  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-		  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-		  <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-		  <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-		  <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+		  <li><a href="https://twitter.com/gaielbleriot" target="_blank"><i class="fa fa-twitter"></i></a></li>
+		  <li><a href="https://www.facebook.com/AZcorpAfrica/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+		  <li><a href="https://www.instagram.com/azcorp_africa/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+		  <li><a href="https://www.youtube.com/channel/UCvlgTzTAw1tABaOXhDM7U8g" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
 		  </ul>
 		</div><!-- social -->
 		<div class="contactNo">
