--- a/iaz/templates/Theme/Users/User/Security/accueilsite.html.twig
+++ b/iaz/templates/Theme/Users/User/Security/accueilsite.html.twig
@@ -147,7 +147,7 @@
   left: 50%;
   transform: translatex(-50%);
   width: 50px;
-  background: #e8e8e8;
+  background: #224373;
   height: 10px;
   display: block;
   border-radius: 50px;
@@ -326,6 +326,318 @@
     margin: 20px;
   }
 } 
+
+
+
+/* -------------------------------- 
+Component 
+-------------------------------- */
+
+.banner {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+  overflow: hidden;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 0 0 1px hsla(230, 13%, 9%, 0.05),
+    0 0.3px 0.4px hsla(230, 13%, 9%, 0.02),
+    0 0.9px 1.5px hsla(230, 13%, 9%, 0.045),
+    0 3.5px 6px hsla(230, 13%, 9%, 0.09);
+  border-radius: 0.375em;
+  transition: 0.3s;
+  width: 100%;
+  margin-inline: auto;
+}
+
+.banner__grid {
+  display: flex;
+  flex-direction: column;
+}
+
+.banner__grid > * {
+  min-width: 0;
+}
+
+.banner__link {
+  position: relative;
+  text-decoration: none;
+  color: hsl(250, 84%, 54%);
+  display: inline-block;
+  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform-origin: left bottom;
+}
+
+.banner__link i {
+  /* label */
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.banner__link::after {
+  /* animated border */
+  content: "";
+  background-color: currentColor;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  -webkit-clip-path: inset(0% round 0.1875em);
+  clip-path: inset(0% round 0.1875em);
+  opacity: 0.15;
+  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.banner__figure {
+  height: 0;
+  width: 100%;
+  padding-bottom: 50%;
+  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.banner__text {
+  padding: 1.5rem;
+}
+
+.banner__link-wrapper {
+  margin-top: 1rem;
+}
+
+.banner:hover {
+  box-shadow: 0 0 0 1px hsla(230, 13%, 9%, 0.05),
+    0 0.9px 1.25px hsla(230, 13%, 9%, 0.025), 0 3px 5px hsla(230, 13%, 9%, 0.05),
+    0 12px 20px hsla(230, 13%, 9%, 0.09);
+}
+
+.banner:hover .banner__link {
+  transform: scale(1.3);
+}
+
+.banner:hover .banner__link i {
+  transform: scale(0.7);
+}
+
+.banner:hover .banner__link::after {
+  height: 100%;
+}
+
+.banner:hover .banner__figure {
+  transform: scale(1.05);
+}
+
+@media (min-width: 64rem) {
+  .banner__grid {
+    flex-direction: row-reverse;
+  }
+
+  .banner__grid > * {
+    width: 50%;
+  }
+
+  .banner__figure {
+    height: 100%;
+    padding-bottom: 0;
+    -webkit-clip-path: polygon(100px 0%, 100% 0%, 100% 100%, 50px 100%);
+    clip-path: polygon(100px 0%, 100% 0%, 100% 100%, 50px 100%);
+  }
+
+  .banner__text {
+    padding: 3rem;
+  }
+
+  .banner__link-wrapper {
+    margin-top: 1.5rem;
+  }
+
+  .banner--invert .banner__grid {
+    flex-direction: row;
+  }
+
+  .banner--invert .banner__figure {
+    -webkit-clip-path: polygon(
+      0% 0%,
+      calc(100% - 100px) 0%,
+      calc(100% - 50px) 100%,
+      0% 100%
+    );
+    clip-path: polygon(
+      0% 0%,
+      calc(100% - 100px) 0%,
+      calc(100% - 50px) 100%,
+      0% 100%
+    );
+  }
+
+  .banner--invert .banner__text {
+    text-align: right;
+  }
+
+  .banner--invert .banner__link {
+    transform-origin: right bottom;
+  }
+
+  .banner:hover .banner__figure {
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  }
+}
+
+/* ------------------------ Watermark (Please Ignore) ----------------------- */
+.watermark-ctr {
+  --clr-button-bg: #141414;
+  --clr-button: 72, 39, 236;
+  --clr-text: #ffffff;
+
+  position: fixed;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  z-index: 1000;
+}
+.watermark-ctr a {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+}
+.generate-button {
+  --generate-button-star-1-opacity: 0.25;
+  --generate-button-star-1-scale: 1;
+  --generate-button-star-2-opacity: 1;
+  --generate-button-star-2-scale: 1;
+  --generate-button-star-3-opacity: 0.5;
+  --generate-button-star-3-scale: 1;
+  --generate-button-dots-opacity: 0;
+  appearance: none;
+  outline: none;
+  border: none;
+  padding: 14px 24px 14px 20px;
+  border-radius: 29px;
+  margin: 0;
+  background-color: var(--clr-button-bg);
+  color: var(--clr-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 1;
+  transform: scale(var(--generate-button-scale, 1)) translateZ(0);
+  box-shadow: 0px 0px 120px var(--generate-button-shadow-wide, transparent),
+    0px 4px 12px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.1),
+    inset 0px 1px 1px
+      var(--generate-button-shadow-inset, rgba(255, 255, 255, 0.04)),
+    0 0 0 var(--generate-button-shadow-outline, 0px)
+      rgba(var(--clr-button), 0.4);
+  transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s, color 0.3s;
+}
+.generate-button:before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 20%;
+  height: 20px;
+  left: 20%;
+  bottom: -10px;
+  background: rgba(204, 204, 204, 0.4);
+  filter: blur(12.5px);
+  z-index: 2;
+  clip-path: inset(-200% -30% 10px -30% round 29px);
+  opacity: 0;
+  transition: opacity 0.4s;
+  transform: translateZ(0);
+}
+.generate-button span {
+  position: relative;
+  z-index: 1;
+  font-family: "Poppins", Arial;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.005em;
+  display: block;
+  user-select: none;
+}
+.generate-button .stroke {
+  mix-blend-mode: hard-light;
+}
+.generate-button .stroke svg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke-width: 0.75px;
+  stroke: #e2d9ff;
+  stroke-dasharray: 1.5 14;
+  stroke-dashoffset: 22;
+  opacity: 0;
+}
+.generate-button .stroke svg:nth-child(2) {
+  stroke-width: 1px;
+  stroke-opacity: 0.5;
+  filter: blur(3px);
+}
+
+.generate-button svg.icon {
+  width: 18px;
+  height: 20px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.generate-button svg.icon path:nth-child(1) {
+  opacity: var(--generate-button-star-1-opacity);
+  transform: scale(var(--generate-button-star-1-scale)) translateZ(0);
+  transform-origin: 25% 14.58%;
+}
+.generate-button svg.icon path:nth-child(2) {
+  opacity: var(--generate-button-star-2-opacity);
+  transform: scale(var(--generate-button-star-2-scale)) translateZ(0);
+  transform-origin: 60.42% 50%;
+}
+.generate-button svg.icon path:nth-child(3) {
+  opacity: var(--generate-button-star-3-opacity);
+  transform: scale(var(--generate-button-star-3-scale)) translateZ(0);
+  transform-origin: 25% 85.42%;
+}
+.generate-button:hover {
+  --generate-button-scale: 1.01;
+  --generate-button-shadow-wide: rgba(var(--clr-button), 0.4);
+  --generate-button-shadow-inset: rgba(255, 255, 255, 0.35);
+  --generate-button-shadow-outline: 3px;
+  color: var(--clr-text);
+  background-color: rgba(var(--clr-button));
+}
+.generate-button:hover .stroke svg {
+  animation: stroke 2s linear infinite;
+}
+.generate-button:hover:before {
+  opacity: 1;
+}
+.generate-button:hover span:before {
+  opacity: 0;
+}
+.generate-button:hover:active {
+  --generate-button-scale: 1.05;
+}
+@keyframes stroke {
+  0% {
+    opacity: 0;
+  }
+  25%,
+  75% {
+    opacity: 1;
+  }
+  95%,
+  100% {
+    stroke-dashoffset: 6;
+    opacity: 0;
+  }
+}
 </style>
 
 <div>
@@ -486,8 +798,35 @@ animation-name: fadeIn; padding: 10px 0px; margin-top: 20px;">
 
 			<div class="related_post_sec single_post">
 			  <h3>Nos Formations Continues</h3>
+			  {% for formation in liste_formation|slice(1,2) %}
+				{% for scatFormation in formation.getSouscategories|slice(0,2) %}
+				<a href="#0" class="banner" aria-label="Shop now" style="margin-bottom: 10px;">
+					<div class="banner__grid">
+					<div aria-hidden="true">
+						<figure class="banner__figure" style="background-image: url({{ asset('template/images/present.png') }});"></figure>
+					</div>
+				
+					<div class="banner__text">
+						<h2>{{ scatFormation.nom }}</h2>
+						<p>{{ scatFormation.description }}</p>
+				
+						<p class="banner__link-wrapper">
+						<span class="banner__link">
+							<i>EN savoir plus</i>
+						</span>
+						</p>
+					</div>
+					</div>
+				</a>
+				{% endfor %}
+
+				<div class="margin-top: 20px;">
+					<a href="{{ path('produit_produit_produit_formation_institut', {'id': formation.id}) }}" class="btn btn-block learnBtn">Afficher tout</a>
+				</div>
+		  	  {% endfor %}
+
 			  <ul>
-				{% for formation in liste_formation|slice(1,2) %}
+				{# % for formation in liste_formation|slice(1,2) %}
 		  		{% for scatFormation in formation.getSouscategories|slice(0,2) %}
 				<li>
 				  <span class="rel_thumb">
@@ -503,10 +842,12 @@ animation-name: fadeIn; padding: 10px 0px; margin-top: 20px;">
 				  </div><!--end rel right-->
 				</li>
 				{% endfor %}
-		  		{% endfor %}
-
+		  		{% endfor % #}
 			  </ul>
 			</div><!--related_post_sec-->
+
+
+			
 
 		</div><!--videoNine-->
 		</div><!-- col-sm-8 col-xs-12 -->
@@ -514,7 +855,7 @@ animation-name: fadeIn; padding: 10px 0px; margin-top: 20px;">
 		<div class="col-sm-4 col-xs-12">
 		  <div class="formArea clearfix">
 			<div class="formTitle">
-			  <h3>Retrouvez un formation</h3>
+			  <h3>Retrouvez une formation</h3>
 			  <p>Offered in small class sizes with great emphasis on the demands of the specification and exam technique.</p>
 			</div><!-- formTitle -->
 			<form action="#" method="post">
@@ -545,44 +886,22 @@ animation-name: fadeIn; padding: 10px 0px; margin-top: 20px;">
 			<div class="upcoming_events">
 			  <h3>Nos derniers évènements</h3>
 			  <ul>
+				{% for event in liste_article %}
 				<li class="related_post_sec single_post">
 				  <span class="date-wrapper">
-					<span class="date"><span>24</span>January</span>
+					<span class="date"><span>{{ event.date|date('d') }}</span>{{ event.date|date('M') }}</span>
 				  </span>
 				  <div class="rel_right">
-					<h4><a href="">Offered in small class sizes with great emphasis...</a></h4>
+					<h4><a href="">{{ event.nom }}</a></h4>
 					<div class="meta">
 					  <span class="place"><i class="fa fa-map-marker"></i>Main Campus</span>
-					  <span class="event-time"><i class="fa fa-clock-o"></i>11.00 pm</span>
+					  <span class="event-time"><i class="fa fa-clock-o"></i>{{ event.date|date('H') }}:{{ event.date|date('i') }}:{{ event.date|date('s') }}</span>
 					</div>
 				  </div>
 				</li>
-				<li class="related_post_sec single_post">
-				  <span class="date-wrapper">
-					<span class="date"><span>24</span>January</span>
-				  </span>
-				  <div class="rel_right">
-					<h4><a href="">Offered in small class sizes with great emphasis...</a></h4>
-					<div class="meta">
-					  <span class="place"><i class="fa fa-map-marker"></i>Main Campus</span>
-					  <span class="event-time"><i class="fa fa-clock-o"></i>11.00 pm</span>
-					</div>
-				  </div>
-				</li>
-				<li class="related_post_sec single_post">
-				  <span class="date-wrapper">
-					<span class="date"><span>24</span>January</span>
-				  </span>
-				  <div class="rel_right">
-					<h4><a href="">Offered in small class sizes with great emphasis...</a></h4>
-					<div class="meta">
-					  <span class="place"><i class="fa fa-map-marker"></i>Main Campus</span>
-					  <span class="event-time"><i class="fa fa-clock-o"></i>11.00 pm</span>
-					</div>
-				  </div>
-				</li>
+				{% endfor %}
 			  </ul>
-			  <a href="" class="btn btn-default btn-block">Plus d'évènements</a>
+			  <a href="{{ path('produit_service_apropos_denous', {'position': 'evenement'}) }}" class="btn btn-default btn-block">Plus d'évènements</a>
 			</div>
 		  </div><!-- end list_block -->
 		</div><!-- col-sm-4 col-xs-12 -->
